src/test/ui/error-codes/E0407.stderr
error[E0407]: method `b` is not a member of trait `Foo`
  --> $DIR/E0407.rs:9:5
   |
LL |     fn b() {}
   |     ^^^-^^^^^
   |     |  |
   |     |  help: did you mean `a`? (a similarly named associated function)
   |     not a member of trait `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0407`.
